--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -22,7 +22,7 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: var(--font-family);
+  font-family: var(--font-family), sans-serif;
   background-color: var(--surface-ground);
   color: var(--text-color);
 }
