--- a/ui/src/app/projects/project-modal/user-assignment/user-assignment.component.html
+++ b/ui/src/app/projects/project-modal/user-assignment/user-assignment.component.html
@@ -6,7 +6,7 @@
   [resizable]="false"
   [style]="{ width: '800px' }"
   header="Manage Project Users"
-  (onHide)="onClose()">
+  (visibleChange)="onClose()">
 
   <div class="user-assignment-content">
     <p-message
