--- a/ui/src/app/projects/project-modal/user-assignment/user-assignment.component.html
+++ b/ui/src/app/projects/project-modal/user-assignment/user-assignment.component.html
@@ -4,7 +4,7 @@
   [closable]="true"
   [draggable]="false"
   [resizable]="false"
-  [style]="{ width: '800px' }"
+  [style]="{ width: '1000px' }"
   header="Manage Project Users"
   (visibleChange)="onClose()">
 
@@ -59,6 +59,16 @@
           </div>
 
           <div class="form-field">
+            <label>Fee</label>
+            <p-inputNumber
+              [(ngModel)]="userFee"
+              placeholder="Add fee"
+              [autofocus]="false"
+              class="w-full">
+            </p-inputNumber>
+          </div>
+
+          <div class="form-field">
             <p-button
               label="Add User"
               icon="pi pi-plus"
@@ -83,6 +93,7 @@
             <th>User</th>
             <th>Email</th>
             <th>Role</th>
+            <th>Fee</th>
             <th>Actions</th>
           </tr>
         </ng-template>
@@ -98,8 +109,7 @@
             <td>
               <p-dropdown
                 [options]="roleOptions"
-                [ngModel]="projectUser.role"
-                (onChange)="updateUserRole(projectUser, $event.value)"
+                [(ngModel)]="projectUser.role"
                 [disabled]="loading"
                 [appendTo]="'body'"
                 [autofocus]="false"
@@ -107,16 +117,35 @@
               </p-dropdown>
             </td>
             <td>
-              <p-button
-                icon="pi pi-trash"
-                [text]="true"
-                [rounded]="true"
-                severity="danger"
-                size="small"
-                (onClick)="removeUser(projectUser)"
-                [disabled]="loading"
-                pTooltip="Remove User">
-              </p-button>
+              <div>
+                <p-inputNumber
+                  [(ngModel)]="projectUser.fee"
+                  [disabled]="loading"
+                  suffix=" Ft/hour" />
+              </div>
+            </td>
+            <td>
+              <div class="flex flex-row items-center">
+                <p-button
+                  label="Update user"
+                  icon="pi pi-refresh"
+                  [text]="true"
+                  severity="success"
+                  size="small"
+                  (onClick)="updateUserRoleAndFee(projectUser)"
+                  [disabled]="loading">
+                </p-button>
+                <p-button
+                  icon="pi pi-trash"
+                  [text]="true"
+                  [rounded]="true"
+                  severity="danger"
+                  size="small"
+                  (onClick)="removeUser(projectUser)"
+                  [disabled]="loading"
+                  pTooltip="Remove User">
+                </p-button>
+              </div>
             </td>
           </tr>
         </ng-template>
